--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -33,7 +33,8 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="33dp"
-            android:text="Reset Score"/>
+            android:background="#FFFFFF"
+            android:text="Reset Score" />
 
         <Button
             android:id="@+id/doneButton"
