vvhs themed x's and o's

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -4,20 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/white"
+    android:descendantFocusability="beforeDescendants"
+    android:orientation="vertical"
+    android:visibility="visible"
     tools:context=".GameActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        
+        android:layout_height="85dp"
+        android:background="@drawable/banner"
+        android:clipChildren="false"
+        android:clipToPadding="false">
+
         <TextView
             android:id="@+id/p1Text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Player 1: 0"
-            android:textSize="30sp"/>
+            android:textSize="30sp"
+            android:textColor="@color/white"/>
 
         <TextView
             android:id="@+id/p2Text"
@@ -25,7 +31,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/p1Text"
             android:text="Player 2: 0"
-            android:textSize="30sp"/>
+            android:textSize="30sp"
+            android:textColor="@color/white"/>
 
         <Button
             android:id="@+id/resetButton"
@@ -44,8 +51,7 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="150dp"
-            android:text="Back"/>
-
+            android:text="Back" />
 
 
     </RelativeLayout>
@@ -54,30 +60,30 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-        
+
         <Button
             android:id="@+id/button00"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:textSize="60sp"
-            android:background="@color/background"/>
+            android:background="@color/background"
+            android:textSize="60sp" />
 
         <Button
             android:id="@+id/button01"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:textSize="60sp"
-            android:background="@color/eagleRed"/>
+            android:background="@color/eagleRed"
+            android:textSize="60sp" />
 
         <Button
             android:id="@+id/button02"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:textSize="60sp"
-            android:background="@color/background"/>
+            android:background="@color/background"
+            android:textSize="60sp" />
 
     </LinearLayout>
 
@@ -91,24 +97,24 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:textSize="60sp"
-            android:background="@color/eagleRed"/>
+            android:background="@color/eagleRed"
+            android:textSize="60sp" />
 
         <Button
             android:id="@+id/button11"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:textSize="60sp"
-            android:background="@color/background"/>
+            android:background="@color/background"
+            android:textSize="60sp" />
 
         <Button
             android:id="@+id/button12"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:textSize="60sp"
-            android:background="@color/eagleRed"/>
+            android:background="@color/eagleRed"
+            android:textSize="60sp" />
 
     </LinearLayout>
 
@@ -122,24 +128,24 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:textSize="60sp"
-            android:background="@color/background"/>
+            android:background="@color/background"
+            android:textSize="60sp" />
 
         <Button
             android:id="@+id/button21"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:textSize="60sp"
-            android:background="@color/eagleRed"/>
+            android:background="@color/eagleRed"
+            android:textSize="60sp" />
 
         <Button
             android:id="@+id/button22"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:textSize="60sp"
-            android:background="@color/background"/>
+            android:background="@color/background"
+            android:textSize="60sp" />
 
     </LinearLayout>
 
