vvhs themed fonts

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -23,7 +23,8 @@
             android:layout_height="wrap_content"
             android:text="Player 1: 0"
             android:textSize="30sp"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            android:fontFamily="@font/colleges"/>
 
         <TextView
             android:id="@+id/p2Text"
@@ -32,7 +33,8 @@
             android:layout_below="@+id/p1Text"
             android:text="Player 2: 0"
             android:textSize="30sp"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            android:fontFamily="@font/colleges"/>
 
         <Button
             android:id="@+id/resetButton"
@@ -42,7 +44,8 @@
             android:layout_centerVertical="true"
             android:layout_marginEnd="33dp"
             android:background="#FFFFFF"
-            android:text="Reset Score" />
+            android:text="Reset Score"
+            android:fontFamily="@font/colleges"/>
 
         <Button
             android:id="@+id/doneButton"
@@ -51,7 +54,8 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="150dp"
-            android:text="Back" />
+            android:text="Back"
+            android:fontFamily="@font/colleges"/>
 
 
     </RelativeLayout>
